--- a/css/18.css.animation.css
+++ b/css/18.css.animation.css
@@ -1,23 +1,155 @@
-body {height: 10000px;}
-.wrapper {max-width: 1200px; margin: 50px auto;}
-.box {width: 200px; border: 2px solid red; margin: 24px; /* overflow: hidden; */}
-.box > img {transition: all 1s;}
-.box1:hover > img {transform: scale(1.8) rotate(45deg);}
-.box2:hover > img {transform: translate(-50%, -50%)}
-.box3:hover > img {transform: rotate(3600deg);}
-.box4 > img {transform-origin: bottom;}
-.box4:hover > img {transform: rotateX(180deg);}
-.box5 {perspective: 700px;}
-.box5 > img {transform-origin: left;}
-.box5:hover > img {transform: rotateY(-180deg);}
-.box6 > img {transform-origin: right bottom;}
-.box6:hover > img {transform: rotateZ(180deg);}
-.box7 > img {transform-origin: bottom;}
-.box7:hover > img {transform: skew(-25deg);}
-.box8 > img {transform-origin: right;}
-.box8:hover > img {transform: skewY(-25deg);}
-.box9 >img {transition: all 1s;opacity: 0.3%;}
-.box9:hover > img {width:100% ;opacity: 1%;}
+body {
+	height: 10000px;
+}
 
-.box10>img {transition: all 1s;opacity: 0.3%;}
-.box10:hover > img {width:100% ;opacity: 1%;}
+.wrapper {
+	max-width: 1200px;
+	margin: 50px auto;
+}
+
+.box {
+	width: 200px;
+	border: 2px solid red;
+	margin: 24px;
+	/* overflow: hidden; */
+}
+
+.box>img {
+	transition: all 1s;
+}
+
+.box1:hover>img {
+	transform: scale(1.8) rotate(45deg);
+}
+
+.box2:hover>img {
+	transform: translate(-50%, -50%)
+}
+
+.box3:hover>img {
+	transform: rotate(3600deg);
+}
+
+.box4>img {
+	transform-origin: bottom;
+}
+
+.box4:hover>img {
+	transform: rotateX(180deg);
+}
+
+.box5 {
+	perspective: 700px;
+}
+
+.box5>img {
+	transform-origin: left;
+}
+
+.box5:hover>img {
+	transform: rotateY(-180deg);
+}
+
+.box6>img {
+	transform-origin: right bottom;
+}
+
+.box6:hover>img {
+	transform: rotateZ(180deg);
+}
+
+.box7>img {
+	transform-origin: bottom;
+}
+
+.box7:hover>img {
+	transform: skew(-25deg);
+}
+
+.box8>img {
+	transform-origin: right;
+}
+
+.box8:hover>img {
+	transform: skewY(-25deg);
+}
+
+.box9 {
+	perspective: 200px;
+}
+
+.box9>img {
+	transition: all 1s;
+	opacity: 0.3;
+}
+
+.box9>img {
+	transform-style: preserve-3d;
+	transform-origin: bottom;
+}
+
+.box9:hover>img {
+	transform: rotateX(75deg);
+}
+
+.box10 {
+	transition: all 1s;
+	
+}
+
+.box10:hover {
+	width: 100%;
+
+}
+
+.box11 {
+	animation-name: ani11;
+	animation-duration: 2s;
+	animation-fill-mode: forwards;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+	animation-timing-function: linear;
+}
+
+@keyframes ani11 {
+	from {
+		transform: translateX(0);
+	}
+
+	to {
+		transform: translateX(1200px);
+	}
+}
+
+.box.box12 {width: 50px; height: 50px; 
+	border-left: 6px solid orange; 
+	border-top: 6px solid orange; 
+	border-right: 6px solid orange; 
+	border-bottom: 6px solid white;
+	border-radius: 50%; 
+	animation-name: ani12;
+	animation-duration: 1s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
+@keyframes ani12 {
+	0% {transform: rotate(0);}
+	100% {transform: rotate(360deg);}
+}
+
+.box13 {
+	animation-name: ani13;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+	animation-duration: 2s;
+	animation-delay: 2s;
+	animation-timing-function: ease-in-out;
+}
+@keyframes ani13 {
+	0% {transform: translate(0, 0) rotate(0);}
+	25% {transform: translate(1200px, 0) rotate(720deg);}
+	50% {transform: translate(1200px, 600px) rotate(0);}
+	75% {transform: translate(0, 600px) rotate(720deg);;}
+	100% {transform: translate(0, 0) rotate(0);}
+}
