--- a/css/28.table.css
+++ b/css/28.table.css
@@ -1,2 +1,7 @@
-.sample-tb{width: 100%;height: 100vh;border: 1px solid red;}
-.sample-tb td{width: 33.3333%;text-align: left;vertical-align: top;}
+h1 {font-size: 16px;}
+.sample-tb {width: 100%;}
+.sample-tb td {width: 33.3333%; text-align: left; vertical-align: top; padding: 3rem;}
+
+.sample-tb td:nth-child(1) {background-color: rgb(190, 153, 51);}
+.sample-tb td:nth-child(2) {background-color: rgb(22, 134, 134);}
+.sample-tb td:nth-child(3) {background-color: rgb(74, 141, 19);}
